Fix unwanted space to right of docs page content on mobile
gh-164

--- a/assets/css/v1/paketo.scss
+++ b/assets/css/v1/paketo.scss
@@ -79,6 +79,7 @@ code {
 	color: $link-text-color;
 	font-size: 1.1em;
 	line-height: 1.5em;
+	overflow-wrap: break-word;
 }
 td {
 	border:	1px solid #DDD;
